# todolist_api/openApi.yml
@@ -20,7 +20,75 @@ tags:
   - name: "userstodo"
     description: "lien entre les utilisateurs et les choses a faire"
 paths:
-    /users/register:
+
+  /users/name/{username}:
+    get:
+      tags:
+        - "users"
+      summary: "récupérer un utilisateur par son username"
+      operationId: getUserByUsername
+      parameters:
+        - name: "username"
+          in: "path"
+          description: "Le nom d'utilisateur"
+          required: true
+          schema: 
+            type: "string"
+      responses:
+        "200":
+          description: "L'utilisateur recherché est retourné"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/users'
+        "404":
+          description: "user not found"
+
+  /users/{id}:
+    get:
+      tags:
+        - "users"
+      summary: "récupérer un utilisateur par son id"
+      operationId: "getUserById"
+      parameters:
+        - name: "id"
+          in: path
+          description: "L'identifiant de l'utilisateur"
+          required: true
+          schema:
+            type: "integer"
+      responses:
+        "200":
+          description: "L'utilisateur à été trouvé"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/users'
+        "404":
+          description: "user not found"
+    delete:
+      tags:
+        - "users"
+      summary: "supprimer un utilisateur"
+      operationId: "deleteUserById"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "L'identifiant de l'utilisateur"
+          required: true
+          schema: 
+            type: "integer"
+      responses:
+        "201":
+          description: "L'utilisateur à été supprimé"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/users'
+        "404":
+          description: "user not found"
+
+  /users/register:
     post: 
       tags:
         - "users"
@@ -33,7 +101,14 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/users'
-    /users/login:
+      responses:
+        "201":
+          description: "Ajoute un utilisateur"
+          content: true
+        "400": 
+          description: "Un champs essentiels n'est pas présent ou incorrect (username, password, mail)"
+
+  /users/login:
     post: 
       tags:
         - "users"
