# todolist_api/routers/users.js
@@ -4,12 +4,14 @@ usersController = require('../controllers/users');
 //route for get uall users
 router.get('/', usersController.getUsers);
 //route for get user by id
-router.get('/id/:id', usersController.getUserById);
+router.get('/:id', usersController.getUserById);
 //route for get user by username
 router.get('/username/:username', usersController.getUserByUsername);
 //route for register
 router.post('/register', usersController.register);
 // Route pour la connexion
 router.post('/login', usersController.login);
+
+router.delete('/:id', usersController.deleteUserById)
 
 module.exports = router;
